style: Fix overflowing layout

--- a/app/globals.css
+++ b/app/globals.css
@@ -28,7 +28,6 @@ body {
 
   font-size: clamp(0.75rem, 1vw + 0.5rem, 1rem);
   line-height: 110%;
-  overflow-x: hidden;
 }
 
 @layer base {
